made a basic layout and finding api to call

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Teller</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
-    
+<body align="center">
+    <h1>WEATHER TELLER</h1>
+    <p>Hey fellow,Enter the name of the city you want to know the weather of:</p>
+    <input type="text" id="city" placeholder="City Name">
+    <button onclick="showWeather()">Enter</button>
+    <div id="result"></div>
 </body>
 </html>
