calling api and display city name with temperature

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Teller</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
 </head>
 <body align="center">
     <h1>WEATHER TELLER</h1>
     <p>Hey fellow,Enter the name of the city you want to know the weather of:</p>
     <input type="text" id="city" placeholder="City Name">
     <button onclick="showWeather()">Enter</button>
-    <div id="result"></div>
+    <div id="result">results coming</div>
+    <script src="script.js"></script>
 </body>
 </html>
