changed the background color of the result section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Hey fellow,Enter the name of the city you want to know the weather of:</p>
     <input type="text" id="city" placeholder="City Name">
     <button onclick="showWeather()">Enter</button>
-    <div id="result">results coming</div>
+    <div id="result"><span id="result1">results coming</span></div>
     <script src="script.js"></script>
 </body>
 </html>
